--- a/src/app/components/members/members.component.css
+++ b/src/app/components/members/members.component.css
@@ -130,4 +130,14 @@ span.filters {
           margin-bottom: 150px;
       }
 
+      .pulse-button div {
+          bottom: 5%;
+      }
+
+      .pulse-button {
+          font-size: 1.5rem;
+          width: 50px;
+          height: 50px;
+      }
+
   }
