--- a/src/app/components/modal/modal.component.css
+++ b/src/app/components/modal/modal.component.css
@@ -57,10 +57,6 @@
     background-color: transparent;
 }
 
-.btn-yes {
-
-}
-
 .btn-no {
     font-weight: bold;
     border: 4px solid #f9f8fd !important;
@@ -69,4 +65,18 @@
 .btn-ok {
     color: #f9f8fd;
     border-color: #f9f8fd;
+}
+
+@media only screen and (max-width: 1000px) {
+    .inner-container span {
+        font-size: 1rem;
+    }
+
+    .button-section {
+        width: 90%;
+    }
+
+    .button-section button {
+        width: 80px !important;
+    }
 }
