--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -21,10 +21,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent20">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/members">Members</a>
+                    <a class="nav-link" routerLink="/members" (click)="isClicked">Members</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/sports">Sports</a>
+                    <a class="nav-link" routerLink="/sports" (click)="isClicked">Sports</a>
                 </li>
             </ul>
         </div>
